--- a/requirements.txt
+++ b/requirements.txt
@@ -11,6 +11,7 @@ Flask==2.0.1
 Flask-WTF==0.15.1
 gql==3.0.0a5
 graphql-core==3.1.5
+gunicorn==20.1.0
 idna==3.2
 itsdangerous==2.0.1
 Jinja2==3.0.1
