--- a/requirements.txt
+++ b/requirements.txt
@@ -20,6 +20,7 @@ multidict==5.1.0
 pipreqs==0.4.10
 python-dateutil==2.8.2
 python-dotenv==0.19.0
+pytz==2021.3
 requests==2.26.0
 six==1.16.0
 typing-extensions==3.10.0.0
